# bigbrother

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bigbrother  config.template.yaml  go.mod  go.sum
.github/workflows/: build.yaml  docker.yaml
cmd/bigbrother/: main.go
cmd/bigbrother/cmd/: openlist.go  parse.go  root.go  server.go
internal/client/openlist/: client.go
internal/client/telegram/: client.go
internal/client/tmdb/: movie.go  tv.go
internal/config/: config.go
internal/media/: info.go  mapper.go  normalize.go  parser.go  parser_test.go  re.go
internal/media/testdata/: anime.yaml  dir.yaml  movie.yaml  parser.yaml  tv_episode.yaml  tv_season_episode.yaml
internal/openlist/: client.go  fs.go
internal/tmdb/: client.go  search.go  types.go
server/: library.go  server.go
src/: cli.rs  logger.rs  main.rs
src/common/: config.rs  error.rs  state.rs
src/parser/: episode.rs  mod.rs  title.rs
src/task/: alist.rs  message.rs  mod.rs  push.rs  tmdb.rs  tv.rs
