[package]
name = "bigbrother"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"

tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "time",
  "local-time",
] }
tracing-appender = "0.2"
backtrace = "0.3"

clap = { version = "4.2", features = ["derive"] }
time = { version = "0.3" }

reqwest = { version = "0.11", features = [
  "rustls-tls",
  "json",
  "gzip",
  "deflate",
], default-features = false }
thiserror = "1.0"

regex = "1"
lingua = { version = "1.6.2", default-features = false, features = [
  "english",
  "chinese",
  "japanese",
] }
unicode-segmentation = "1.10"
